2018-10-05  Charlie Zender  <zender@uci.edu>

	* Implement option to use NC_DOUBLE instead of NC_FLOAT in htrn2nb.F90

2018-10-04  Charlie Zender  <zender@uci.edu>

	* Adapt swnb2 to use new split HC and HHCWC inputs and verify BFB with before split

	* Convert O3.F90 for O3 and O2 into O3.F90 for O3 and O2.F90 for O2

2018-10-03  Charlie Zender  <zender@uci.edu>

	* CO and N2O both cause matrix near-singular errors in DISORT, and NaNf fluxes on Linux and memory errors on MacOS

	* Include default profiles and line-absorption by CO, N2O

2018-10-02  Charlie Zender  <zender@uci.edu>

	* Utilize temperature dependence of O3 cross-sections in each layer

	* Expand bnd_nbr_max for all gases to accomodate new 2500/5000 band Malkmus files

	* Adopt new convention .par filename = hitran16_YYYYMMDD.txt

	* Updating August 2018 HITRAN which restores (from 2012) ~1200 H2O bands inadvertently dropped in 2016

	* Increase spectral range of Malkmus model from 2000-17900 cm-1 (1590 10cm-1 bands) to 2000-27000 cm-1 (2500 10cm-1 bands)

2018-10-01  Charlie Zender  <zender@uci.edu>

	* htrn2nb.F90 expand ln_nbr_max to 600000 since HITRAN16 O3 from 0.2--100.0 um has 449570, CO2 has 559874

	* htrn2nb.sh Keep all gases at 10 cm-1 bands except CO2 and CH4 at 5 cm-1 bands

	* Eliminate @defined(@array) syntax since Perl deprecated it in ~2014

2018-09-28  Charlie Zender  <zender@uci.edu>

	* Fixed bug where ss_alb_fct was set to 1.0 not to odsl/odxl for pure Rayleigh scattering atmospheres (neglected absorption)
	According to this ChangeLog, bug may have been introduced 20071215 and would have affected all simulations where particle scattering was turned-off

2018-06-06  Charlie Zender  <zender@uci.edu>

	* Add slr_zen_ngl_dgr_cmd_ln to ease computations for Cheng

2017-01-17  Charlie Zender  <zender@uci.edu>

	* Increase terms to convergence from original 10 to new 12 in disort3 plkavg()

	* Change lmn_TOA_cmd_ln from nL to ulm m-2 sr-1

2016-12-23  Charlie Zender  <zender@uci.edu>
