@@ -269,7 +269,8 @@ alias simoni_t "Troy Simoni <troy.simoni@cornell.edu>" # (0)476 72 07 82 (H), (0
 # General list
 alias leonard "Peter Leonard <pleonard@sesda3.com>" # NASA
 alias baron "Jeff Baron <jeff@baronanddangelo.org>" # marathoner HR86
-alias vicente "Pedro Vicente <pedro.vicente@space-research.org>" # programmer
+#alias vicente "Pedro Vicente <pedro.vicente@space-research.org>" # programmer
+alias vicente "Pedro Vicente <me@pedro-vicente.net>" # programmer
 alias ferrell "Wanda Ferrell <wanda.ferrell@science.doe.gov>"
 #alias hansen "Elaine Hansen <hansen%vega.colorado.edu@spot.colorado.edu>"
 alias abatzoglou "John Abatzoglou <jabatzog@uci.edu>"
